number alignment fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3351,12 +3351,9 @@ input, select, textarea {
 .circular-chart {
 	width: 100%;
 	height: auto;
-
+	/*transform: rotate(-90deg);*/
 }
-/*transform: rotate(-90deg);
 
-
-*/
 .circle-bg {
 	fill: none;
 	stroke: #eee;
@@ -3370,11 +3367,7 @@ input, select, textarea {
 	stroke-linecap: round;
 	transition: stroke-dasharray 1.4s ease-out;
 }
-/*
-	transform: rotate(90deg);
-	transform-origin: center;
 
-*/
 .percentage {
 	fill: #4b5e64;
 	font-family: sans-serif;
@@ -3382,6 +3375,8 @@ input, select, textarea {
 	font-weight: bold;
 	text-anchor: middle;
 	dominant-baseline: middle;
+	/*transform: rotate(90deg);
+	transform-origin: center;*/
   }
 
   
